--- a/MVCCapstone/Views/Home/Index.cshtml
+++ b/MVCCapstone/Views/Home/Index.cshtml
@@ -2,30 +2,30 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="jumbotron bg-primary">
+    <h1 class="text-center">Game Tracker</h1>
+    <p class="lead">Game Tracker is a helpful way to keep track of video games stats of games that are being played or already beaten. </p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Register here to be able to keep track of your own game library.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <button class="btn-primary">@Html.ActionLink("Login", "Login", "Account", new { Style = "color: white; text-decoration:none;" })</button>
+
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Already Registered?</h2>
+        <p>Login here to check out your own game library</p>
+        <button class="btn-primary text-dark" >@Html.ActionLink("Register", "Register", "Account", new { Style = "color: white; text-decoration:none;" })</button>
+
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Trade-In Calculator</h2>
+        <p>Curious to see what the price would be for trading in a game? checkout the trade-in calculator here. (trade-in calculator is not an exact calcutalion and only an estimate)</p>
+        <button class="btn-primary">@Html.ActionLink("Trade Calc", "TradeInPriceCalc", "Games", new { Style = "color: white; text-decoration:none;" })</button>
+
     </div>
 </div>
