--- a/MVCCapstone/Views/MyGames/Display.cshtml
+++ b/MVCCapstone/Views/MyGames/Display.cshtml
@@ -4,7 +4,7 @@
 }
 @model IEnumerable<MVCCapstone.Models.MyGames>
 <h2>My Games List</h2>
-<table class="table table-hover">
+<table class="table table-hover text-light">
     <tr>
         <th>@Html.DisplayNameFor(model => model.Name)</th>
         <th>@Html.DisplayNameFor(model => model.Genre)</th>
