--- a/MVCCapstone/Views/MyGames/Index.cshtml
+++ b/MVCCapstone/Views/MyGames/Index.cshtml
@@ -20,7 +20,7 @@
     </p>
 
 }
-<table class="table table-striped">
+<table class="table table-striped text-light">
     <tr>
         <th>
             @Html.ActionLink("Name", "Index", new { sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter })
