--- a/MVCCapstone/Views/Shared/_Layout.cshtml
+++ b/MVCCapstone/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
-<body>
+<body class="bg-dark text-light">
     <header>
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <a class="navbar-brand" href="#"><i class="fas fa-gamepad"></i> Game Tracker</a>
@@ -17,21 +17,13 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav" style="text-decoration:none;">
                     <li class="nav-item nav-link">
                         @Html.ActionLink("Home", "Index", "Home")
                     </li>
-                    <li class="nav-item nav-link">
-                        @Html.ActionLink("About", "About", "Home")
-                    </li>
+                  
                     <li class="nav-item nav-link">
                         @Html.ActionLink("Contact", "Contact", "Home")
-                    </li>
-                    <li class="nav-item nav-link">
-                        @Html.ActionLink("Wishlist", "ShowAllGames", "Games")
-                    </li>
-                    <li class="nav-item nav-link">
-                        @Html.ActionLink("Add To Wishlist", "AddNewGame", "Games")
                     </li>
                     <li class="nav-item nav-link">
                         @Html.ActionLink("Trade In Calculator", "TradeInPriceCalc", "Games")
@@ -48,10 +40,6 @@
                     <li class="nav-item nav-link">
                         @Html.ActionLink("Trophies", "Index", "Trophies")
                     </li>
-                    <li class="nav-item nav-link">
-                        @Html.ActionLink("Artwork", "Index", "CoverArts")
-                    </li>
-
                 </ul>
                 <ul class="nav navbar-nav ml-auto">
                     @Html.Partial("_LoginPartial")
@@ -63,7 +51,7 @@
         @RenderBody()
         <hr />
         <footer class="text-info">
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - CIT 218 | Richard Robertson</p>
         </footer>
     </div>
 
