--- a/MVCCapstone/Views/Stats/Index.cshtml
+++ b/MVCCapstone/Views/Stats/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table table-hover">
+<table class="table table-hover text-light">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Games.Name)
